updated description of notebook objectives

--- a/workflows/analysis/structure_archetypes.ipynb
+++ b/workflows/analysis/structure_archetypes.ipynb
@@ -10,7 +10,7 @@
     "**Modified:** 2025-03-10  \n",
     "\n",
     "#### Overview\n",
-    "In this notebook, I analyze the clusters created in `clustering.ipynb`, also located in this repository. Analysis is unstructured.\n",
+    "In this notebook, I analyze the clusters created in `clustering.ipynb`, also located in this repository. Analysis is unstructured. The objective is to pull out salient features that describe clusters in the dataset. The final product should be a set of home archetypes that can be described broadly (e.g. old homes with high structure density, large homes with wooden roofs on large properties, etc.). Ideally, I would be able to assign each structure type a range of fuel volumes that the structure and its defensible space can assume (this will make my segmentation more applicable to WUI fire spread modeling).\n",
     "\n",
     "I analyze cluster segmentation by HIZ and structure features. I describe segmented clusters. I join the clusters to the building geopackage to map structure locations by cluster (this last part is conducted in ArcGIS Pro).\n",
     "\n",
