--- a/workflows/analysis/_FINAL.ipynb
+++ b/workflows/analysis/_FINAL.ipynb
@@ -9,7 +9,7 @@
     "**Institution**: University of Montana, National Center for Landscape Fire Analysis\n",
     "\n",
     "**Created:** 2025-03-11 | \n",
-    "**Modified:** 2025-03-11  \n",
+    "**Modified:** 2025-03-13  \n",
     "\n",
     "#### Overview\n",
     "This notebook shows the salient points of predictions, clustering, and analysis for the Ouray Parcel Risk project. Consider this the highlight reel of the analysis folder in this repository.\n",
@@ -2272,6 +2272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **1** Reduce dimensionality with t-SNE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
@@ -2318,6 +2325,13 @@
     "plt.title(\"t-SNE Projection - 22 classified and encoded features\")\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **2** Cluster with DBSCAN"
    ]
   },
   {
