--- a/workflows/analysis/clustering_2.ipynb
+++ b/workflows/analysis/clustering_2.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,8 @@
    "metadata": {},
    "source": [
     "## Dimensionality Reduction with t-SNE\n",
-    "---"
+    "---\n",
+    "### All features"
    ]
   },
   {
@@ -854,11 +855,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DSpace Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Separate HIZ features\n",
+    "hiz_cols = [\n",
+    "    'detached_garage',\n",
+    "    'wood_stove',\n",
+    "    'property_acres',\n",
+    "    'ssd_class',\n",
+    "    'intsc>2',\n",
+    "    'class_fc0_2m',\n",
+    "    'class_fc2_4m',\n",
+    "    'class_fc4_8m',\n",
+    "    'class_fc8_40m',\n",
+    "    'total_fc>60%',\n",
+    "    'index'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Structure Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate structure features\n",
+    "str_cols = [\n",
+    "    'porch_balcony',\n",
+    "    'cond_below_avg',\n",
+    "    'wood_stove',\n",
+    "    'home_sqft',\n",
+    "    'wood_exw',\n",
+    "    'wood_roof',\n",
+    "    'roofstr_multipeak',\n",
+    "    'index'\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
