--- a/workflows/analysis/_FINAL.ipynb
+++ b/workflows/analysis/_FINAL.ipynb
@@ -125,6 +125,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original ratings: \n",
+      "Risk_Rating\n",
+      "High         610\n",
+      "Moderate     312\n",
+      "Low          302\n",
+      "Extreme      115\n",
+      "Very High     53\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "refactored ratings:\n",
+      "Risk_Rating_new\n",
+      "Moderate     940\n",
+      "High         179\n",
+      "Low          175\n",
+      "Extreme       63\n",
+      "Very High     35\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'original ratings: \\n{full_df['Risk_Rating'].value_counts()}')\n",
+    "print(f'\\nrefactored ratings:\\n{full_df['Risk_Rating_new'].value_counts()}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
