--- a/workflows/analysis/risk_pred.ipynb
+++ b/workflows/analysis/risk_pred.ipynb
@@ -3583,8 +3583,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "parcel",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
