modified mardown text and renamed file

--- a/workflows/analysis/_OVERVIEW.ipynb
+++ b/workflows/analysis/_OVERVIEW.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Compliation - Ouray County Parcel Risk\n",
+    "# Final Analysis Overview - Ouray County Parcel Risk\n",
     "**Author:** Bryce A Young  \n",
     "**Institution**: University of Montana, National Center for Landscape Fire Analysis\n",
     "\n",
     "**Created:** 2025-03-11 | \n",
-    "**Modified:** 2025-03-13  \n",
+    "**Modified:** 2025-05-15  \n",
     "\n",
     "#### Overview\n",
     "This notebook shows the salient points of predictions, clustering, and analysis for the Ouray Parcel Risk project. Consider this the highlight reel of the analysis folder in this repository.\n",
@@ -6426,6 +6426,14 @@
    "source": [
     "# Save to file\n",
     "gdf_clusters.to_file(os.path.join(out, 'clusters.gpkg'), driver='GPKG', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This has been an overview of the risk prediction and clustering analysis completed for Ouray County. Requests for additional details should be directed to Bryce A Young. "
    ]
   }
  ],
