--- a/post-thesis-work/exposure_overlay.ipynb
+++ b/post-thesis-work/exposure_overlay.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "02322a7f",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f13371e1",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        " 'compress': 'lzw'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3b458d7e",
    "metadata": {},
    "outputs": [],
@@ -176,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "73e5c18f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a0c7da7390>"
+       "<matplotlib.image.AxesImage at 0x1a0cf6de210>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4e5ac70f",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6715a0fa",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d9da1e57",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "730c6496",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "225f32e0",
    "metadata": {},
    "outputs": [],
