--- a/post-thesis-work/exposure_overlay.ipynb
+++ b/post-thesis-work/exposure_overlay.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dd53199d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "# rps path\n",
     "rps_path = r\"D:\\_DATA\\WRC\\RPS_CONUS_2020\\RPS_CONUS\"\n",
     "# output folder for clipped RPS raster\n",
-    "out = os.path.join(data, 'risk')\n",
+    "risk = os.path.join(data, 'risk')\n",
     "# county boundary folder\n",
     "geoms = os.path.join(data, 'county_geoms')"
    ]
@@ -259,7 +259,7 @@
     "    'crs': county_prof_30m['crs'],\n",
     "    'compress': 'lzw'\n",
     "})\n",
-    "with rio.open(os.path.join(out, 'RPS_30m_5070.tif'), 'w', **out_profile) as dst:\n",
+    "with rio.open(os.path.join(risk, 'RPS_30m_5070.tif'), 'w', **out_profile) as dst:\n",
     "    dst.write(rps_county, 1)"
    ]
   },
@@ -427,7 +427,7 @@
     "    'width': county_prof_30m_26913['width']\n",
     "})\n",
     "\n",
-    "with rio.open(os.path.join(out, 'RPS_30m_26913.tif'), 'w', **out_profile) as dst:\n",
+    "with rio.open(os.path.join(risk, 'RPS_30m_26913.tif'), 'w', **out_profile) as dst:\n",
     "    dst.write(rps_masked, 1)"
    ]
   },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "aeef5d9e",
    "metadata": {},
    "outputs": [
@@ -494,6 +494,7 @@
        "      <th>Risk_Rating_new</th>\n",
        "      <th>cluster_dbscan</th>\n",
        "      <th>geometry</th>\n",
+       "      <th>rps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -527,6 +528,7 @@
        "      <td>Low</td>\n",
        "      <td>0</td>\n",
        "      <td>POINT (252995.437 4241729.295)</td>\n",
+       "      <td>0.046641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -558,6 +560,7 @@
        "      <td>Low</td>\n",
        "      <td>1</td>\n",
        "      <td>POINT (253043.842 4242576.202)</td>\n",
+       "      <td>0.051093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -589,6 +592,7 @@
        "      <td>Low</td>\n",
        "      <td>5</td>\n",
        "      <td>POINT (252852.699 4242304.895)</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -620,6 +624,7 @@
        "      <td>Moderate</td>\n",
        "      <td>1</td>\n",
        "      <td>POINT (253690.349 4240864.501)</td>\n",
+       "      <td>0.096121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -651,6 +656,7 @@
        "      <td>Low</td>\n",
        "      <td>2</td>\n",
        "      <td>POINT (252706.517 4241700.068)</td>\n",
+       "      <td>0.054491</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -685,15 +691,22 @@
        "3           1.0            0.0             1.0                  0.0   \n",
        "4           1.0            0.0             1.0                  0.0   \n",
        "\n",
-       "  Risk_Rating Risk_Rating_new  cluster_dbscan                        geometry  \n",
-       "0         Low             Low               0  POINT (252995.437 4241729.295)  \n",
-       "1         Low             Low               1  POINT (253043.842 4242576.202)  \n",
-       "2         Low             Low               5  POINT (252852.699 4242304.895)  \n",
-       "3    Moderate        Moderate               1  POINT (253690.349 4240864.501)  \n",
-       "4         Low             Low               2  POINT (252706.517 4241700.068)  "
+       "  Risk_Rating Risk_Rating_new  cluster_dbscan                        geometry  \\\n",
+       "0         Low             Low               0  POINT (252995.437 4241729.295)   \n",
+       "1         Low             Low               1  POINT (253043.842 4242576.202)   \n",
+       "2         Low             Low               5  POINT (252852.699 4242304.895)   \n",
+       "3    Moderate        Moderate               1  POINT (253690.349 4240864.501)   \n",
+       "4         Low             Low               2  POINT (252706.517 4241700.068)   \n",
+       "\n",
+       "        rps  \n",
+       "0  0.046641  \n",
+       "1  0.051093  \n",
+       "2  0.059946  \n",
+       "3  0.096121  \n",
+       "4  0.054491  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,12 +715,39 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None)\n",
+    "import rasterio as rio\n",
+    "from utils.raster import read_raster\n",
+    "out = os.path.join(data, '_out')\n",
     "\n",
-    "parcels = os.path.join(data, '_out')\n",
+    "# Import data\n",
+    "rps, rps_prof = read_raster(os.path.join(risk, 'RPS_30m_26913.tif'), layer=1, profile=True)\n",
+    "gdf = gpd.read_file(os.path.join(out, 'clusters.gpkg'))\n",
     "\n",
-    "gdf = gpd.read_file(os.path.join(parcels, 'clusters.gpkg'))\n",
-    "\n",
+    "# Extract RPS values at structure locations\n",
+    "from rasterio.transform import rowcol\n",
+    "x = gdf.geometry.x\n",
+    "y = gdf.geometry.y\n",
+    "rows, cols = rowcol(rps_prof['transform'], x, y)\n",
+    "gdf[\"rps\"] = rps[rows, cols]\n",
     "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5f9fc8ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(os.path.join(out, 'clusters_risk.gpkg'), driver='GPKG', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5cfb18",
+   "metadata": {},
+   "source": [
+    "## Analyze Results"
    ]
   },
   {
