--- a/post-thesis-work/exposure_overlay.ipynb
+++ b/post-thesis-work/exposure_overlay.ipynb
@@ -834,7 +834,13 @@
     "The plot shows minor differences in mean rps value per risk rating, although it is worth noting that as risk rating increases, so does the mean rps. This would indicate that homes that recieve a higher risk rating in the field are also more likely to be exposed to wildfire. The relationship could be causal, meaning that the risk ratings incorporate exposure and are therefore capturing similar data to RPS. Or the relationship could be happenstantial, meaning that more susceptible homes are also more likely to be exposed to wildfire.\n",
     "\n",
     "## Conclusion\n",
-    "This concludes this minor analysis. The data will now be visualized in ArcGIS."
+    "This concludes this minor analysis. By viewing structure susceptibility and hazard/exposure together on a map, community managers and grant writers can prioritize defensible space and home hardening in areas where susceptibility and exposure are both high.\n",
+    "\n",
+    "Insurance companies are also interested in this view of risk, especially in California. They are interested in broader hazard and exposure to communities and homes. They are also interested in the susceptibility of each home, irrespective of the likelihood of wildfire occurrence. Homes with higher exposure should be prioritized for hardening and should be incentivized by insurance providers to increase the level of hardening where exposure is greater. Homes on smaller parcels and with more neighboring structures should be prioritized for home hardening because they cannot control all the available fuels that may expose them to wildfire. On the other hard, isolated structures closer to the wildlands and without neighboring structures within the defensible space should prioritize creating defensible space.\n",
+    "\n",
+    "The data used in this project can be used to identify these structure classes.\n",
+    "\n",
+    "![Homes Labeled by RPS * susceptibility over RPS raster](../figures/suscept_rps.jpg)"
    ]
   }
  ],
